feat: add `Footer` and `Navbar` components to UI

--- a/components/Layouts/MainLayout/MainLayout.module.scss
+++ b/components/Layouts/MainLayout/MainLayout.module.scss
@@ -1,9 +1,6 @@
 @import 'styles/mixins.scss';
 
 .container {
+  @include containerPositioning;
   @include paddingReset;
-
-  margin: 0 auto;
-
-  max-width: 120rem;
 }
