--- a/styles/main.scss
+++ b/styles/main.scss
@@ -10,6 +10,8 @@ html {
 *:before,
 *:after {
   box-sizing: inherit;
+
+  user-select: none;
 }
 
 body {
@@ -22,7 +24,25 @@ body {
     font-size: 1.4rem;
   }
 
-  @media (minwidth: 340px) {
+  @media (min-width: 340px) {
     font-size: 1.6rem;
   }
+}
+
+p {
+  margin: 0;
+}
+
+a {
+  color: inherit;
+
+  text-decoration: none;
+}
+
+ul {
+  list-style-type: none;
+
+  margin: 0;
+
+  padding: 0;
 }
