--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,4 +1,5 @@
 @import './normalize.css';
+@import './variables.scss';
 
 html {
   box-sizing: border-box;
@@ -15,6 +16,8 @@ html {
 }
 
 body {
+  color: $primaryColor;
+
   font-family: Inter, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
     Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
